--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <img src="SPA%20Icon.png" alt="SupplyPoint Vault Logo" style="height: 100px; margin-bottom: 1rem;">
+            <img src="images/SPA%20Icon.png" alt="SupplyPoint Vault Logo" style="height: 100px; margin-bottom: 1rem;">
             <h1>SupplyPoint Vault</h1>
             <p class="subtitle">Privacy-first tracking app</p>
             <p class="tagline">Easily and securely track your firearms, ammunition, accessories, and range visits in a modern Android app.</p>
