--- a/index.html
+++ b/index.html
@@ -368,7 +368,18 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <img src="images/SPA%20Icon.png" alt="SupplyPoint Vault Logo" style="height: 100px; margin-bottom: 1rem;">
+            <div style="
+                width: 160px;
+                height: 160px;
+                background-color: white;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin: 0 auto 1rem auto;
+            ">
+              <img src="SPA%20Icon.png" alt="SupplyPoint Vault Logo" style="height: 100px; width: 100px;" />
+            </div>
             <h1>SupplyPoint Vault</h1>
             <p class="subtitle">Privacy-first tracking app</p>
             <p class="tagline">Easily and securely track your firearms, ammunition, accessories, and range visits in a modern Android app.</p>
@@ -412,7 +423,7 @@
     <footer class="footer" id="contact">
         <div class="container">
             <div class="footer-content">
-                <div class="footer-logo">📦</div>
+                <img src="images/SPA%20Icon.png" alt="SupplyPoint Vault Logo" style="height: 100px; margin-bottom: 1rem;">
                 <div class="footer-contact">
                     <h3>Contact</h3>
                     <a href="mailto:support@supplypointvault.com">support@supplypointvault.com</a>
