--- a/index.html
+++ b/index.html
@@ -368,18 +368,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <div style="
-                width: 160px;
-                height: 160px;
-                background-color: white;
-                border-radius: 50%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                margin: 0 auto 1rem auto;
-            ">
-              <img src="SPA%20Icon.png" alt="SupplyPoint Vault Logo" style="height: 100px; width: 100px;" />
-            </div>
+            <img src="/images/logo%20white%20color.png" alt="SupplyPoint Vault Logo" style="height: 100px; width: 100px;" />
             <h1>SupplyPoint Vault</h1>
             <p class="subtitle">Privacy-first tracking app</p>
             <p class="tagline">Easily and securely track your firearms, ammunition, accessories, and range visits in a modern Android app.</p>
