--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     <footer class="footer" id="contact">
         <div class="container">
             <div class="footer-content">
-                <img src="images/SPA%20Icon.png" alt="SupplyPoint Vault Logo" style="height: 100px; margin-bottom: 1rem;">
+                <img src="images/logo%20white%20color.png" alt="SupplyPoint Vault Logo" style="height: 100px; margin-bottom: 1rem;">
                 <div class="footer-contact">
                     <h3>Contact</h3>
                     <a href="mailto:support@supplypointvault.com">support@supplypointvault.com</a>
