--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <img src="/images/logo%20white%20color.png" alt="SupplyPoint Vault Logo" style="height: 100px; width: 100px;" />
+            <img src="/images/logo_white_color.png" alt="SupplyPoint Vault Logo" style="height: 100px; width: 100px;" />
             <h1>SupplyPoint Vault</h1>
             <p class="subtitle">Privacy-first tracking app</p>
             <p class="tagline">Easily and securely track your firearms, ammunition, accessories, and range visits in a modern Android app.</p>
@@ -412,7 +412,7 @@
     <footer class="footer" id="contact">
         <div class="container">
             <div class="footer-content">
-                <img src="images/logo%20white%20color.png" alt="SupplyPoint Vault Logo" style="height: 100px; margin-bottom: 1rem;">
+                <img src="images/logo_white_color.png" alt="SupplyPoint Vault Logo" style="height: 100px; margin-bottom: 1rem;">
                 <div class="footer-contact">
                     <h3>Contact</h3>
                     <a href="mailto:support@supplypointvault.com">support@supplypointvault.com</a>
