--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <img src="/images/logo_white_color.png" alt="SupplyPoint Vault Logo" style="height: 150px; width: 150px;" />
+            <img src="/images/logo_white_color.png" alt="SupplyPoint Vault Logo" style="height: 100px; width: 100px;" />
             <h1>SupplyPoint Vault</h1>
             <p class="subtitle">Privacy-first tracking app</p>
             <p class="tagline">Easily and securely track your firearms, ammunition, accessories, and range visits in a modern Android app.</p>
@@ -387,7 +387,10 @@
                     <p>Organize and track your firearms with detailed specifications and custom notes.</p>
                 </div>
                 <div class="screenshot-item">
-                    <img src="screenshot2.png" alt="Ammo Inventory Screenshot">
+                    <video autoplay loop muted playsinline width="100%">
+                        <source src="screenshots/manage_ammo.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                     <h3>Ammo Inventory</h3>
                     <p>Keep precise records of your ammunition stock with caliber, quantity, and purchase details.</p>
                 </div>
