--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,175 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Privacy Policy – SupplyPoint Vault</title>
+  <style>
+    body {
+      font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', system-ui, sans-serif;
+      background-color: #2C3E50;
+      color: #FFFFFF;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
 
+    .container {
+      max-width: 800px;
+      margin: 120px auto 64px;
+      padding: 0 16px;
+    }
+
+    h1 {
+      font-size: 36px;
+      font-weight: bold;
+      margin-bottom: 24px;
+      color: #E67E22;
+    }
+
+    h2 {
+      font-size: 20px;
+      margin-top: 32px;
+      color: #F8F9F9;
+    }
+
+    p {
+      margin-bottom: 16px;
+      font-size: 14px;
+      color: #F8F9F9;
+      opacity: 0.9;
+    }
+
+    a {
+      color: #E67E22;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    /* Header Navigation */
+    .header {
+      background: rgba(27, 42, 56, 0.95);
+      backdrop-filter: blur(10px);
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 16px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .logo {
+      font-size: 18px;
+      font-weight: 500;
+      color: #FFFFFF;
+    }
+
+    .nav-links {
+      display: flex;
+      list-style: none;
+      gap: 32px;
+    }
+
+    .nav-links a {
+      text-decoration: none;
+      color: #FFFFFF;
+      font-weight: 400;
+      font-size: 14px;
+      transition: color 0.3s ease;
+    }
+
+    .nav-links a:hover {
+      color: #E67E22;
+    }
+
+    /* Footer */
+    footer {
+      background: #1B2A38;
+      color: #FFFFFF;
+      padding: 48px 0;
+      text-align: center;
+    }
+
+    .footer-links a {
+      color: #FFFFFF;
+      text-decoration: none;
+      margin: 0 8px;
+      font-size: 14px;
+    }
+
+    .footer-links a:hover {
+      color: #E67E22;
+    }
+
+    @media (max-width: 768px) {
+      .nav-links {
+        display: none;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Header -->
+  <header class="header">
+    <nav class="nav">
+      <div class="logo">SupplyPoint Vault</div>
+      <ul class="nav-links">
+        <li><a href="index.html#features">Features</a></li>
+        <li><a href="index.html#screenshots">Screenshots</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Privacy Policy Content -->
+  <div class="container">
+    <h1>Privacy Policy</h1>
+    <p>Effective Date: July 20, 2025</p>
+
+    <p><strong>SupplyPoint Vault</strong> respects your privacy. This app is designed from the ground up to prioritize your data control and security.</p>
+
+    <h2>1. No Account Required</h2>
+    <p>SupplyPoint Vault does not require you to create an account or sign in. No personal information is collected or stored externally.</p>
+
+    <h2>2. Local-Only Storage</h2>
+    <p>All your firearm, ammo, and range data is stored locally on your device. The app does not upload, transmit, or sync your information to any cloud or server.</p>
+
+    <h2>3. No Analytics or Tracking</h2>
+    <p>This app does not use analytics tools, trackers, or cookies of any kind. Your usage behavior is not monitored or shared.</p>
+
+    <h2>4. Permissions</h2>
+    <p>Some permissions (like camera or file access) are requested only for specific features like taking firearm photos or importing backups. These are optional and used locally only.</p>
+
+    <h2>5. Backups and Exports</h2>
+    <p>You may choose to export or back up your data manually. Files you generate are saved to your own device or storage location of your choosing.</p>
+
+    <h2>6. Questions?</h2>
+    <p>If you have any questions about privacy or the app, feel free to reach out:  
+      <a href="mailto:questions@supplypointvault.com">questions@supplypointvault.com</a>
+    </p>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <div class="footer-links">
+      <a href="index.html">Home</a> |
+      <a href="privacy-policy.html">Privacy Policy</a>
+    </div>
+    <p style="margin-top: 16px; font-size: 12px; opacity: 0.7;">&copy; 2025 SupplyPoint Vault. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
