--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -16,37 +16,8 @@
 
     .container {
       max-width: 800px;
-      margin: 120px auto 64px;
+      margin: 0 auto;
       padding: 0 16px;
-    }
-
-    h1 {
-      font-size: 36px;
-      font-weight: bold;
-      margin-bottom: 24px;
-      color: #E67E22;
-    }
-
-    h2 {
-      font-size: 20px;
-      margin-top: 32px;
-      color: #F8F9F9;
-    }
-
-    p {
-      margin-bottom: 16px;
-      font-size: 14px;
-      color: #F8F9F9;
-      opacity: 0.9;
-    }
-
-    a {
-      color: #E67E22;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
     }
 
     /* Header Navigation */
@@ -94,6 +65,71 @@
       color: #E67E22;
     }
 
+    /* Hero Section */
+    .hero {
+      padding: 120px 0 80px;
+      text-align: center;
+      background: linear-gradient(135deg, #1B2A38 0%, #2C3E50 100%);
+    }
+
+    .hero-logo {
+      width: 120px;
+      height: 120px;
+      background: #F8F9F9;
+      border-radius: 16px;
+      margin: 0 auto 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 14px;
+      color: #2C3E50;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+      border: 2px dashed #E67E22;
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      font-weight: bold;
+      margin-bottom: 16px;
+      color: #FFFFFF;
+    }
+
+    .hero .subtitle {
+      font-size: 20px;
+      color: #FFFFFF;
+      max-width: 600px;
+      margin: 0 auto;
+      opacity: 0.8;
+    }
+
+    /* Policy Content */
+    .policy-content {
+      margin-top: 48px;
+      padding-bottom: 64px;
+    }
+
+    .policy-content h2 {
+      font-size: 20px;
+      margin-top: 32px;
+      color: #F8F9F9;
+    }
+
+    .policy-content p {
+      margin-bottom: 16px;
+      font-size: 14px;
+      color: #F8F9F9;
+      opacity: 0.9;
+    }
+
+    a {
+      color: #E67E22;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
     /* Footer */
     footer {
       background: #1B2A38;
@@ -117,6 +153,14 @@
       .nav-links {
         display: none;
       }
+
+      .hero h1 {
+        font-size: 32px;
+      }
+
+      .hero .subtitle {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
@@ -134,32 +178,53 @@
     </nav>
   </header>
 
+  <!-- Hero -->
+  <section class="hero">
+    <div class="container">
+      <img src="images/logo_white_color.png" alt="SupplyPoint Vault Logo" style="height: 100px; width: 100px;" />
+      <h1>Privacy Policy</h1>
+      <p class="subtitle">We respect your data. Here's what we (don't) collect.</p>
+    </div>
+  </section>
+
   <!-- Main Privacy Policy Content -->
-  <div class="container">
-    <h1>Privacy Policy</h1>
-    <p>Effective Date: July 20, 2025</p>
+  <div class="container policy-content">
+    <p><strong>Effective Date:</strong> July 20, 2025</p>
 
-    <p><strong>SupplyPoint Vault</strong> respects your privacy. This app is designed from the ground up to prioritize your data control and security.</p>
+    <p><strong>SupplyPoint Vault</strong> is designed to prioritize your privacy, data ownership, and offline security.</p>
 
-    <h2>1. No Account Required</h2>
-    <p>SupplyPoint Vault does not require you to create an account or sign in. No personal information is collected or stored externally.</p>
+    <h2>1. Information We Collect</h2>
+        <p>SupplyPoint Vault does not require a login or account. We collect zero personal information.</p>
+        <p>SupplyPoint Vault stores all your data — firearm details, ammo logs, photos, range notes — on your device only. We don't upload it, sync it, or even peek at it.</p>
+        <p>No servers. No accounts. No tracking.</p>
+        <p>Because when it comes to your personal records, we believe Big Brother should stay out of the gun safe.</p>
 
-    <h2>2. Local-Only Storage</h2>
-    <p>All your firearm, ammo, and range data is stored locally on your device. The app does not upload, transmit, or sync your information to any cloud or server.</p>
+    <h2>2. Permissions We Request (But Only When Needed)</h2>
+        <p>To make this app useful, we might ask for:</P>
+            <li>Camera – so you can snap pics of your gear</li>
+            <li>Storage – to save those pics right on your phone</li>
+        <p>That's it. No secret data harvesting. No background snooping.</p>
+    <h2>3. Who We Share Your Data With</h2>
+        <p>You. Just you.</p>
+        <p>We don't share your info anywhere. No cloud syncing, no analytics, no sketchy ad networks.</p>
+        <p>You're the only one with access to your records — and we think that's how it should be.</p>
 
-    <h2>3. No Analytics or Tracking</h2>
-    <p>This app does not use analytics tools, trackers, or cookies of any kind. Your usage behavior is not monitored or shared.</p>
+    <h2>4. Your Control</h2>
+        <li>Want to delete your stuff? Go for it.</li>
+        <li>Export it? Yep, there's a button for that.</li>
+        <li>Burn your phone and toss it in a lake? That's on you.</li>
+        <p>We don't lock you into anything. It’s your data.</p>
+    
+    <h2>5. Backup & Export</h2>
+        <p>You have full control over data exports and backups. These are saved only where you choose.</p>
 
-    <h2>4. Permissions</h2>
-    <p>Some permissions (like camera or file access) are requested only for specific features like taking firearm photos or importing backups. These are optional and used locally only.</p>
-
-    <h2>5. Backups and Exports</h2>
-    <p>You may choose to export or back up your data manually. Files you generate are saved to your own device or storage location of your choosing.</p>
-
-    <h2>6. Questions?</h2>
-    <p>If you have any questions about privacy or the app, feel free to reach out:  
-      <a href="mailto:questions@supplypointvault.com">questions@supplypointvault.com</a>
-    </p>
+    <h2>6. Policy Updates</h2>
+        <p>We might update this privacy policy from time to time — and when we do, you’ll see it here. No sneaky changes.</p>
+    
+    <h2>7. Contact</h2>
+        <p>If you have questions about your privacy, contact us at  
+        <a href="mailto:questions@supplypointvault.com">questions@supplypointvault.com</a>.
+        </p>
   </div>
 
   <!-- Footer -->
