--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                     <ul>
                         <li><a href="#getting-started">Getting Started</a></li>
                         <li><a href="#features">Features</a></li>
-                        <li><a href="#privacy-policy">Privacy Policy</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
