--- a/index.html
+++ b/index.html
@@ -401,6 +401,14 @@
         </div>
     </section>
 
+    <!-- Development Notice -->
+    <section style="background-color:#fffae6; border:1px solid #f0c36d; padding:15px; margin:40px 0; border-radius:8px; text-align:center; font-family:sans-serif;">
+      <h2 style="margin:0; color:#b36b00;">🚀 Coming Soon</h2>
+      <p style="margin:8px 0 0; font-size:1.1em; color:#333;">
+        SupplyPoint Vault is still in development and will be launching on the <strong>Google Play Store</strong> in <strong>October 2025</strong>.
+      </p>
+    </section>
+
     <!-- Features Section -->
     <section class="features" id="features" style="background: #F8F9F9; padding: 80px 0;">
         <div class="container">
