--- a/index.html
+++ b/index.html
@@ -437,11 +437,25 @@
                         Manage scopes, lights, slings, and gear — with ability to link them to specific firearms.
                     </p>
                 </div>
+
+                <div class="feature-item" style="background: #2C3E50; padding: 24px; border-radius: 16px; text-align: center;">
+                    <h3 style="color: #E67E22; font-size: 18px; margin-bottom: 12px;">Parts</h3>
+                    <p style="color: #F8F9F9; font-size: 14px; opacity: 0.85;">
+                        Track every component, from small springs to major upgrades, and keep them linked to the right firearm.
+                    </p>
+                </div>
     
                 <div class="feature-item" style="background: #2C3E50; padding: 24px; border-radius: 16px; text-align: center;">
                     <h3 style="color: #E67E22; font-size: 18px; margin-bottom: 12px;">Range Logs</h3>
                     <p style="color: #F8F9F9; font-size: 14px; opacity: 0.85;">
                         Log range days, firearms used, ammo spent, targets hit, and notes for performance tracking.
+                    </p>
+                </div>
+
+                <div class="feature-item" style="background: #2C3E50; padding: 24px; border-radius: 16px; text-align: center;">
+                    <h3 style="color: #E67E22; font-size: 18px; margin-bottom: 12px;">Reporting</h3>
+                    <p style="color: #F8F9F9; font-size: 14px; opacity: 0.85;">
+                        Generate clear insights with usage stats, purchase history, and inventory summaries — all at your fingertips
                     </p>
                 </div>
     
@@ -468,6 +482,21 @@
         <div class="container">
             <h2>App Preview</h2>
             <div class="screenshot-grid">
+                <div class="screenshot-item">
+                    <img src="screenshots/coming_soon.png" alt="Firearm List Screenshot">
+                    <h3>Reporting</h3>
+                    <p>Visualize inventory, spending, and usage with easy-to-read charts and summaries.</p>
+                </div>
+                <div class="screenshot-item">
+                    <img src="screenshots/coming_soon.png" alt="Firearm List Screenshot">
+                    <h3>Parts List</h3>
+                    <p>Organize and track individual firearm components with full linkage to the right gun.</p>
+                </div>
+                <div class="screenshot-item">
+                    <img src="screenshots/coming_soon.png" alt="Firearm List Screenshot">
+                    <h3>Accessory List</h3>
+                    <p>Manage optics, slings, lights, and other add-ons — all linked to your firearms.</p>
+                </div>
                 <div class="screenshot-item">
                     <img src="screenshots/coming_soon.png" alt="Firearm List Screenshot">
                     <h3>Firearm List</h3>
