--- a/index.html
+++ b/index.html
@@ -469,7 +469,14 @@
                 <div class="feature-item" style="background: #2C3E50; padding: 24px; border-radius: 16px; text-align: center;">
                     <h3 style="color: #E67E22; font-size: 18px; margin-bottom: 12px;">Backup & Export</h3>
                     <p style="color: #F8F9F9; font-size: 14px; opacity: 0.85;">
-                        Export to CSV, back up locally, or restore from file — flexible tools for peace of mind.
+                        Export data, back up locally, or restore from file — flexible tools for peace of mind.
+                    </p>
+                </div>
+
+                <div class="feature-item" style="background: #2C3E50; padding: 24px; border-radius: 16px; text-align: center;">
+                    <h3 style="color: #E67E22; font-size: 18px; margin-bottom: 12px;">Smart Reminders</h3>
+                    <p style="color: #F8F9F9; font-size: 14px; opacity: 0.85;">
+                        “Get notified about firearm maintenance, low ammo, battery changes, and more — right when you need it.
                     </p>
                 </div>
     
