--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
         .screenshot-item img {
             width: 100%;
             max-width: 250px;
-            height: 450px;
-            object-fit: cover;
+            height: auto;
+            object-fit: contain;
             border-radius: 16px;
             background: #F8F9F9;
             border: 2px solid #E67E22;
@@ -476,7 +476,7 @@
                 <div class="feature-item" style="background: #2C3E50; padding: 24px; border-radius: 16px; text-align: center;">
                     <h3 style="color: #E67E22; font-size: 18px; margin-bottom: 12px;">Smart Reminders</h3>
                     <p style="color: #F8F9F9; font-size: 14px; opacity: 0.85;">
-                        “Get notified about firearm maintenance, low ammo, battery changes, and more — right when you need it.
+                        Get notified about firearm maintenance, low ammo, battery changes, and more — right when you need it.
                     </p>
                 </div>
     
