--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         .screenshot-item img {
             width: 100%;
             max-width: 250px;
-            height: auto;
+            height: 300px;
             object-fit: contain;
             border-radius: 16px;
             background: #F8F9F9;
