--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 </div>
                 <div class="screenshot-item">
                     <video autoplay loop muted playsinline width="100%">
-                        <source src="screenshots/manage_ammo.mp4" type="video/mp4">
+                        <source src="screenshots/AddFirearm.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <h3>Ammo Inventory</h3>
