--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             width: 100%;
             max-width: 250px;
             height: 450px;
-            object-fit: cover;
+            object-fit: contain;
             border-radius: 16px;
             background: #F8F9F9;
             border: 2px solid #E67E22;
