--- a/index.html
+++ b/index.html
@@ -496,12 +496,15 @@
                 </div>
                 <div class="screenshot-item">
                     <img src="screenshots/coming_soon.png" alt="Firearm List Screenshot">
-                    <h3>Parts List</h3>
+                    <h3>Parts</h3>
                     <p>Organize and track individual firearm components with full linkage to the right gun.</p>
                 </div>
                 <div class="screenshot-item">
-                    <img src="screenshots/coming_soon.png" alt="Firearm List Screenshot">
-                    <h3>Accessory List</h3>
+                    <video autoplay loop muted playsinline width="100%">
+                        <source src="screenshots/accessories.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <h3>Accessories</h3>
                     <p>Manage optics, slings, lights, and other add-ons — all linked to your firearms.</p>
                 </div>
                 <div class="screenshot-item">
@@ -510,17 +513,17 @@
                         Your browser does not support the video tag.
                     </video>
                 
-                    <h3>Firearm List</h3>
+                    <h3>Firearms</h3>
                     <p>Organize and track your firearms with detailed specifications and custom notes.</p>
                 </div>
                 <div class="screenshot-item">
                     <img src="screenshots/coming_soon.png" alt="Firearm List Screenshot">
-                    <h3>Ammo Inventory</h3>
+                    <h3>Ammo</h3>
                     <p>Keep precise records of your ammunition stock with caliber, quantity, and purchase details.</p>
                 </div>
                 <div class="screenshot-item">
                     <img src="screenshots/coming_soon.png" alt="Range Day Log Screenshot">
-                    <h3>Range Day Log</h3>
+                    <h3>Range Days</h3>
                     <p>Document your range visits, track performance, and log maintenance activities.</p>
                 </div>
             </div>
