--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@
                         <source src="screenshots/accessories.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
+                    
                     <h3>Accessories</h3>
                     <p>Manage optics, slings, lights, and other add-ons — all linked to your firearms.</p>
                 </div>
@@ -517,7 +518,11 @@
                     <p>Organize and track your firearms with detailed specifications and custom notes.</p>
                 </div>
                 <div class="screenshot-item">
-                    <img src="screenshots/coming_soon.png" alt="Firearm List Screenshot">
+                    <video autoplay loop muted playsinline width="100%">
+                        <source src="screenshots/ammo.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    
                     <h3>Ammo</h3>
                     <p>Keep precise records of your ammunition stock with caliber, quantity, and purchase details.</p>
                 </div>
