--- a/index.html
+++ b/index.html
@@ -527,7 +527,11 @@
                     <p>Keep precise records of your ammunition stock with caliber, quantity, and purchase details.</p>
                 </div>
                 <div class="screenshot-item">
-                    <img src="screenshots/coming_soon.png" alt="Range Day Log Screenshot">
+                    <video autoplay loop muted playsinline width="100%">
+                        <source src="screenshots/rangeday.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    
                     <h3>Range Days</h3>
                     <p>Document your range visits, track performance, and log maintenance activities.</p>
                 </div>
