--- a/index.html
+++ b/index.html
@@ -495,7 +495,11 @@
                     <p>Visualize inventory, spending, and usage with easy-to-read charts and summaries.</p>
                 </div>
                 <div class="screenshot-item">
-                    <img src="screenshots/coming_soon.png" alt="Firearm List Screenshot">
+                    <video autoplay loop muted playsinline width="100%">
+                        <source src="screenshots/parts.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    
                     <h3>Parts</h3>
                     <p>Organize and track individual firearm components with full linkage to the right gun.</p>
                 </div>
