--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
     <section style="background-color:#fffae6; border:1px solid #f0c36d; padding:15px; margin:40px 0; border-radius:8px; text-align:center; font-family:sans-serif;">
       <h2 style="margin:0; color:#b36b00;">🚀 Coming Soon</h2>
       <p style="margin:8px 0 0; font-size:1.1em; color:#333;">
-        SupplyPoint Vault is still in development, have to rebuild linking mechanics and will be launching as Beta on the <strong>Google Play Store</strong> in <strong>November 2025</strong>.
+        SupplyPoint Vault is still in development, finished linking. Working on getting notifications working. Close to publishing. If interested in Beta testing, contact us usng infomation at the bottom of the page.
       </p>
     </section>
 
