--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -203,9 +203,10 @@
         <p>To make this app useful, we might ask for:</P>
             <li>Camera – so you can snap pics of your gear</li>
             <li>Storage – to save those pics right on your phone</li>
+            <li>Notifications- to get alerted to upcoming range days, battery replacement, firearm maintenance, low ammo stock, and more.<li>
         <p>That's it. No secret data harvesting. No background snooping.</p>
     <h2>3. Who We Share Your Data With</h2>
-        <p>You. Just you.</p>
+        <p>You. Just you.</pit>
         <p>We don't share your info anywhere. No cloud syncing, no analytics, no sketchy ad networks.</p>
         <p>You're the only one with access to your records — and we think that's how it should be.</p>
 
