--- a/index.html
+++ b/index.html
@@ -490,7 +490,11 @@
             <h2>App Preview</h2>
             <div class="screenshot-grid">
                 <div class="screenshot-item">
-                    <img src="screenshots/coming_soon.png" alt="Firearm List Screenshot">
+                    <video autoplay loop muted playsinline width="100%">
+                        <source src="screenshots/reporting_page.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    
                     <h3>Reporting</h3>
                     <p>Visualize inventory, spending, and usage with easy-to-read charts and summaries.</p>
                 </div>
