--- a/index.html
+++ b/index.html
@@ -403,9 +403,12 @@
 
     <!-- Development Notice -->
     <section style="background-color:#fffae6; border:1px solid #f0c36d; padding:15px; margin:40px 0; border-radius:8px; text-align:center; font-family:sans-serif;">
-      <h2 style="margin:0; color:#b36b00;">🚀 Coming Soon</h2>
+      <h2 style="margin:0; color:#b36b00;">Coming Soon</h2>
       <p style="margin:8px 0 0; font-size:1.1em; color:#333;">
-        SupplyPoint Vault is still in development, finished linking. Working on getting notifications working. Close to publishing. If interested in Beta testing, contact us usng infomation at the bottom of the page.
+        SupplyPoint Vault's initial development is complete, and has been published to the Google Play Store. Before the app is widely available to all users, we are required to complete a closed beta test which is in progress.
+      </p>
+      <p style="margin:8px 0 0; font-size:1.1em; color:#333;">
+       If you are interested in Beta testing the app (beta testers obtain the app for free), contact us using infomation at the bottom of the page.
       </p>
     </section>
 
