--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             font-size: 16px;
             color: #FFFFFF;
             margin-bottom: 16px;
-            max-width: 600px;
+            max-width: 800px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -449,7 +449,7 @@
                 </div>
     
                 <div class="feature-item" style="background: #2C3E50; padding: 24px; border-radius: 16px; text-align: center;">
-                    <h3 style="color: #E67E22; font-size: 18px; margin-bottom: 12px;">Range Logs</h3>
+                    <h3 style="color: #E67E22; font-size: 18px; margin-bottom: 12px;">Range Days</h3>
                     <p style="color: #F8F9F9; font-size: 14px; opacity: 0.85;">
                         Log range days, firearms used, ammo spent, targets hit, and notes for performance tracking.
                     </p>
@@ -569,7 +569,7 @@
                 </div>
                 <div class="footer-links">
                     <ul>
-                        <li><a href="#getting-started">Getting Started</a></li>
+                        <li><a href="#screenshots">Screenshots</a></li>
                         <li><a href="#features">Features</a></li>
                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     </ul>
