--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 
         .footer-social {
             text-align: center;
-            margin-top: 24px;
+            margin-top: 32px;
+            padding-top: 24px;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
         }
-        
+
         .footer-social a {
             color: #FFFFFF;
             font-size: 22px;
@@ -592,6 +594,15 @@
                     <h3>Contact</h3>
                     <a href="mailto:questions@supplypointvault.com">questions@supplypointvault.com</a>
                 </div>
+
+                <div class="footer-links">
+                    <ul>
+                        <li><a href="#screenshots">Screenshots</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    </ul>
+                </div>
+
                 <div class="footer-social">
                     <a href="https://facebook.com/supplypointarms"
                        target="_blank"
@@ -606,14 +617,6 @@
                        aria-label="SupplyPoint Vault on YouTube">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
-                </div>
-
-                <div class="footer-links">
-                    <ul>
-                        <li><a href="#screenshots">Screenshots</a></li>
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                    </ul>
                 </div>
             </div>
         </div>
