--- a/index.html
+++ b/index.html
@@ -598,6 +598,7 @@
                         <li><a href="#screenshots">Screenshots</a></li>
                         <li><a href="#features">Features</a></li>
                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="terms-of-use.html">Terms of Use</a></li>
                     </ul>
                 </div>
 
