--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -232,9 +232,12 @@
   <footer>
     <div class="footer-links">
       <a href="index.html">Home</a> |
-      <a href="privacy-policy.html">Privacy Policy</a>
+      <a href="privacy-policy.html">Privacy Policy</a> |
+      <a href="terms-of-use.html">Terms of Use</a>
     </div>
-    <p style="margin-top: 16px; font-size: 12px; opacity: 0.7;">&copy; 2025 SupplyPoint Vault. All rights reserved.</p>
+    <p style="margin-top: 16px; font-size: 12px; opacity: 0.7;">
+      &copy; 2025 SupplyPoint Vault. All rights reserved.
+    </p>
   </footer>
 
 </body>
